# withcache

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  release.yml  tag-on-version-change.yml
deploy/: Containerfile  compose.local-build.yml  compose.yml  envvars.example
examples/: pull_oras_blob.py
shim/: build.zig  build.zig.zon  shim.zig
src/fromcache/: __init__.py  _shim.py  client.py  curlfromcache.py  server.py  wgetfromcache.py
src/withcache/: __init__.py  _api.py  _app.py  _events_log.py  _settings_store.py  _shim.py  _table_state.py  client.py  curlwithcache.py  oras.py  server.py  wgetwithcache.py
src/withcache/_templates/ui/: _layout.html  _table_macros.html  cached.html  catalog.html  dashboard.html  downloads.html  events.html  login.html  misses.html  settings.html
src/withcache/static/: bootstrap.min.css
tests/: test_differential.py  test_fastapi_admin_forms.py  test_fastapi_blob.py  test_fastapi_catalog_api.py  test_fastapi_events.py  test_fastapi_scaffold.py  test_fastapi_settings_persistence.py  test_fastapi_ui_pages.py  test_fastapi_uvicorn_smoke.py  test_fromcache.py  test_oras.py  test_withcache.py
