[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "withcache"
dynamic = ["version"]  # single source of truth: src/withcache/__init__.py:__version__
description = "Operator-curated, URL-keyed artifact cache for a small lab (CUDA/ROCm/DOCA/firmware)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Simon A. F. Lund", email = "safl@safl.dk" }]
keywords = ["cache", "artifacts", "cuda", "rocm", "doca", "firmware", "lab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Mirroring",
]
dependencies = [
    # v0.9.0 shipped the FastAPI port: the daemon UI + control plane
    # moved off stdlib http.server onto the same stack bty-web and
    # nbdmux use. Keeps the trio's testing shape uniform (FastAPI
    # TestClient across all three) and makes the shared chrome +
    # settings-store patterns extractable into a trio-common lib.
    # ``withcache.client`` / ``withcache.oras`` stay stdlib-only so
    # downstream consumers (bty) don't inherit the framework floor.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # Form-encoded POST parsing behind ``Form()`` deps.
    "python-multipart>=0.0.9",
    # Session cookie signing (SessionMiddleware).
    "itsdangerous>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # FastAPI TestClient uses httpx as its transport.
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/safl/withcache"

[project.scripts]
# curlwithcache / wgetwithcache are NOT console-scripts: the build hook ships
# them as the native binary (platform wheels) or Python launchers (pure wheel),
# so the command name is one thing whichever way you installed.
withcache-server = "withcache.server:main"

[tool.hatch.version]
path = "src/withcache/__init__.py"  # the single source of truth

[tool.hatch.build.targets.wheel]
packages = ["src/withcache"]

# Ship the shim (native binary or Python launcher) — see hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.sdist]
# shim/ is included so an sdist build can compile (or fall back for) the shim.
include = ["src/withcache", "shim", "README.md", "LICENSE", "deploy", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# tests and the shims deliberately import after a sys.path tweak / fallback
"tests/*" = ["E402"]
"src/withcache/curlwithcache.py" = ["E402"]
"src/withcache/wgetwithcache.py" = ["E402"]
